--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,16 @@
     <string name="user_code_hint">请输入验证码</string>
     <string name="user_get_code">获取验证码</string>
     <string name="user_pwd">密码</string>
+    <string name="user_new_pwd">新密码</string>
+    <string name="user_new_pwd01">确认密码</string>
     <string name="user_pwd_hint">请输入密码</string>
+    <string name="user_new_pwd_hint">请输入新密码</string>
+    <string name="user_new_pwd01_hint">请再一次输入密码</string>
     <string name="user_referralCode">邀请码</string>
     <string name="user_referralCode_hint">请输入邀请码，如无可不填</string>
     <string name="user_register">注册</string>
     <string name="user_login">登录</string>
     <string name="user_forget_pwd">忘记密码？</string>
     <string name="user_register_account">注册账号</string>
+    <string name="user_confirm">确认</string>
 </resources>
