--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="ic_clock">&#xe61f; </string> <!--闹钟-->
     <string name="ic_health">&#xe600; </string> <!--健康管理-->
     <string name="ic_member">&#xe78b; </string> <!--个人-->
+    <string name="ic_add">&#xe7e5; </string> <!--添加-->
 
     //
     <string name="action_share">分享</string>
@@ -121,4 +122,16 @@
     <string name="error_missing_global_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_Global 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
     <string name="payment_inst_hk">付款方: HK</string>
     <string name="payment_inst_cn">付款方: CN</string>
+    <!--闹钟-->
+
+    <string name="mon">周一</string>
+    <string name="tue">周二</string>
+    <string name="wed">周三</string>
+    <string name="thu">周四</string>
+    <string name="fri">周五</string>
+    <string name="sat">周六</string>
+    <string name="sun">周日</string>
+    <string name="cycle_sure">确定</string>
+    <string name="vibration">震动</string>
+    <string name="ring">铃声</string>
 </resources>
